--- a/templates/room.html
+++ b/templates/room.html
@@ -425,6 +425,11 @@ c17.613,0,31.891-14.278,31.891-31.891c0-9.157-3.881-17.389-10.061-23.206L312.572
           
           <input type="submit" value="Send" />
         </form>
+        <div id="post-form">
+          {% csrf_token %}
+          {{form}}
+          hello form
+        </div>
       </div>
     </div>
     <h5>&copy; Copyright Reserved Dezukava - 2022</h5>
